# ChangeLog for media-sound/ardour
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Aug 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Remove freesound USE flag.

  20 Jun 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  No longer depend om media-libs/liblo[threads] (USE flag removed)

  13 Jun 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Pull in threads USE flag in liblo, else compile fails.

  02 Jun 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Removed parantheses that pulled in =media-sound/drobilla-9999.
  Removed python inherit (the source compiles with any python 
  implementation).
  usex in src_configure makes the code more concise.

  21 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Use python eclass so that the correct python ABI is used.

  18 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Fix version of some dependencies (closes #0000142). Thanks to jauthu for
  reporting the bug.

  16 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Move to the new git repository.
  Move to waf-utils eclass.
  Remove unneeded eclasses.
  Update EAPI to 5.
  Cleanup.

  08 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Sorted dependencies. Added dependency on dev-libs/serd. Removed bad 
  characters from my ChangeLog messages.

  30 Dec 2012; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-3.9999.ebuild:
  Fixed the ambigous "--doc" flag, replaced with "--docs"
  Thanks to Jannis Achstetter for reporting this

  28 Dec 2012; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  ardour-2.9999.ebuild:
  Fixed some dependencies (depend on virtual packages)

  09 Dec 2012; Karl Linden <lilrc@users.sourceforge.net>