@@ -14,40 +14,45 @@ EGIT_REPO_URI="git://git.${PN}.org/${PN}/${PN}.git"
 LICENSE="GPL-2"
 SLOT="3"
 KEYWORDS=""
-IUSE="altivec debug doc nls sse lv2 vst wiimote"
+IUSE="altivec doc nls +phone-home sse lv2 vst wiimote"
 
 RDEPEND="dev-cpp/cairomm
-	>=dev-cpp/gtkmm-2.8.0
-	>=dev-cpp/glibmm-2.32.0
-	>=dev-cpp/libgnomecanvasmm-2.20.0
-	>=dev-libs/glib-2.2
+	>=dev-cpp/gtkmm-2.18:2.4
+	>=dev-cpp/glibmm-2.32.0:2
+	>=dev-cpp/libgnomecanvasmm-2.20.0:2.6
+	>=dev-libs/glib-2.2:2
 	>=dev-libs/libsigc++-2.0
 	>=dev-libs/libxml2-2.6.0
-	dev-libs/libxslt
-	|| ( dev-libs/serd =media-sound/drobilla-9999 )
-	gnome-base/libgnomecanvas
+	>=gnome-base/libgnomecanvas-2.30
 	>=media-libs/alsa-lib-1.0.14a-r1
-	media-libs/aubio
-	media-libs/flac
-	media-libs/liblo
+	>=media-libs/aubio-0.3.2
+	>=media-libs/flac-1.2.1
+	>=media-libs/liblo-0.26
 	>=media-libs/liblrdf-0.4.0
 	>=media-libs/libsamplerate-0.1.1-r1
 	>=media-libs/libsndfile-1.0.18_pre24
-	media-libs/libsoundtouch
 	>=media-libs/raptor-1.4.2[curl]
-	|| ( >=media-libs/suil-0.6.2 =media-sound/drobilla-9999 )
 	>=media-libs/taglib-1.5
 	>=media-sound/jack-audio-connection-kit-0.120.1
-	net-misc/curl
-	=sci-libs/fftw-3*
+	>=net-misc/curl-7.0.0
+	sci-libs/fftw:3.0
 	virtual/libusb
-	>=x11-libs/gtk+-2.12.1
+	>=x11-libs/gtk+-2.18:2
 	x11-libs/pango
 	x11-themes/gtk-engines
-	lv2? ( || (
-		>=media-libs/lilv-0.14.0
-		=media-sound/drobilla-9999
-	) )
+	lv2? (
+		>=media-libs/lv2-1.0.0
+		|| (
+			(
+				>=dev-libs/serd-0.14.0:0
+				>=dev-libs/sord-0.8.0:0
+				>=media-libs/sratom-0.2.0:0
+				>=media-libs/lilv-0.14.0:0
+				>=media-libs/suil-0.6.0:0
+			)
+			=media-sound/drobilla-9999
+		)
+	)
 	wiimote? ( app-misc/cwiid )"
 
 DEPEND="${RDEPEND}
@@ -67,16 +72,18 @@ src_configure() {
 	local myconf=(
 		--freedesktop
 		--noconfirm
-		$(usex debug --debug "")
-		$(usex nls --nls "")
-		$(usex lv2 --lv2 --no-lv2)
-		$(usex wiimote --wiimote "")
-		$(usex vst --windows-vst "")
 		$(usex doc --docs "")
+		$(usex lv2 --lv2 --no-lv2)
+		$(usex nls --nls --no-nls)
+		$(usex phone-home --phone-home --no-phone-home)
+		$(usex vst --windows-vst "")
+		$(usex wiimote --wiimote "")
 	)
 
-	if use sse || use altivec ;then
+	if use sse || use altivec; then
 		myconf+=( --fpu-optimization )
+	else
+		myconf+=( --no-fpu-optimization )
 	fi
 
 	waf-utils_src_configure ${myconf[@]}
@@ -100,4 +107,9 @@ pkg_postinst() {
 	ewarn "The simplest way to address this is to make a copy of the session file itself"
 	ewarn "(e.g mysession/mysession.ardour) and make that file unreadable using chmod(1)."
 	ewarn ""
+}
+
+pkg_postrm() {
+	fdo-mime_mime_database_update
+	fdo-mime_desktop_database_update
 }
