@@ -8,15 +8,16 @@
 	<use>
 	  <flag name="aubio">Use Paul Brossier's aubio library for feature detection</flag>
 	  <flag name="austate">Build with support for AU settings and presets</flag>
-	  <flag name="sys-libs">Use system libs instead of provided. No upstream support!!!</flag>
-	  <flag name="tranzport">Compile with support for Frontier Designs</flag>
-	  <flag name="oldfonts">Old school font sizes</flag>
 	  <flag name="dmalloc">Compile and link using the dmalloc library</flag>
 	  <flag name="fft_analysis">Include FFT analysis window</flag>
 	  <flag name="fpu_optimization">Build runtime checked assembler code (sse, 3dnow, altivec, mmx)</flag>
 	  <flag name="liblo">Compile with support for liblo library</flag>
+	  <flag name="lv2">Use slv2 effect</flag>
+	  <flag name="oldfonts">Old school font sizes</flag>
+	  <flag name="phone-home">Contact ardour.org at startup for new announcements</flag>
 	  <flag name="surfaces">Build support for control surfaces</flag>
-	  <flag name="lv2">Use slv2 effect"</flag>
+	  <flag name="sys-libs">Use system libs instead of provided. No upstream support!!!</flag>
+	  <flag name="tranzport">Compile with support for Frontier Designs</flag>
 	  <flag name="wiimote">Use Nintendo Wiimote</flag>
 	</use>
 </pkgmetadata>
